# sveltum

./: .gitignore  Cargo.toml  README.md  bootstrap.js  cspell.json  index.js
src/: bootstrap.js  core.rs  js.rs  layer.rs  lib.rs  main.rs  queue.rs  runtime.rs
svelte-adapter-sveltum/: package-lock.json  package.json  rollup.config.js
